--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@apollo/server": "^4.9.5",
+    "express": "^4.18.2",
+    "graphql": "^16.8.1"
   }
 }
