--- a/api/package.json
+++ b/api/package.json
@@ -12,11 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "prisma": "^5.5.2",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@prisma/client": "5.5.2",
     "express": "^4.18.2",
     "graphql": "^16.8.1"
   }
