--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.9.0",
     "prisma": "^5.5.2",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.2.2"
@@ -20,6 +22,8 @@
     "@apollo/server": "^4.9.5",
     "@prisma/client": "5.5.2",
     "express": "^4.18.2",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "zod": "^3.22.4"
   }
 }
