--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,10 +6,17 @@ RUN corepack enable
 FROM base AS build
 WORKDIR /app
 COPY package.json pnpm-lock.yaml ./
-RUN pnpm install --frozen-lockfile
-COPY . .
-RUN pnpm run build
 
+ARG NODE_ENV
+
+RUN if [ "$NODE_ENV" = "development" ]; \
+    then pnpm install --frozen-lockfile; \
+    else pnpm install --prod; \
+    fi
+
+COPY . .
+
+RUN pnpm build
 
 FROM base as runner
 WORKDIR /app
@@ -18,8 +25,6 @@ COPY --from=build /app/prisma /app/prisma
 COPY --from=build /app/node_modules /app/node_modules
 COPY --from=build /app/package.json /app/package.json
 
-# Expose port 4000
 EXPOSE 4000
 
-# Start the application
 CMD ["pnpm", "start"]
