--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,12 @@ services:
 
   api:
     container_name: teebay-api
-    build:
-      context: ./api
-      dockerfile: Dockerfile
     environment:
       - DATABASE_URL=${DATABASE_URL}
     ports:
       - 4000:4000
+    depends_on:
+      - postgres
 
 volumes:
   postgres_data:
